# dotctl

./: Cargo.toml  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: bootstrap.rs  main.rs  manifest.rs  sync.rs
