[package]
name = "dotctl"
version = "0.1.0"
authors = ["Blake Ridgway <blake@blakeridway.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/blakeridgway/dotctl"
repository = "https://github.com/blakeridgway/dotctl"
description = "A dotfile and dev environment manager."

[dependencies]
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
shellexpand = "3.1.1"
chrono = "0.4.42"
clap = { version = "4.0", features = ["derive"] }